fix: image is too wide

--- a/assets/style.css
+++ b/assets/style.css
@@ -40,6 +40,10 @@ div.cleanup-unviewed-videos-main {
 				input[type="checkbox"] {
 					margin-right: 1rem;
 				}
+
+				img {
+					width: 285px;
+				}
 			}
 		}
 	}
